k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: employee-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

        - name: backend

          image: employee-backend:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 3000
