k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: employee-platform

spec:

  selector:
    app: frontend

  ports:

    - port: 80
      targetPort: 80
