k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-ingress
  namespace: employee-platform

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:

  ingressClassName: nginx

  rules:

    - host: employee.local

      http:

        paths:

          - path: /api(/|$)(.*)

            pathType: ImplementationSpecific

            backend:

              service:
                name: backend-service

                port:
                  number: 3000

          - path: /(.*)

            pathType: ImplementationSpecific

            backend:

              service:
                name: frontend-service

                port:
                  number: 80
